# jira_alchemy

./: README.md  main.py  pyproject.toml  requirements.txt
